# tauri-plugin-frame

./: .gitmessage  Cargo.toml  LICENSE  README.md  package.json
.github/: FUNDING.yml
.github/workflows/: clippy.yml  test.yml
examples/: README.md  index.html  package.json
examples/src-tauri/: Cargo.toml  tauri.conf.json
examples/src-tauri/capabilities/: default.json
examples/src-tauri/src/: lib.rs  main.rs
examples/tauri-app/: package.json
examples/tauri-app/src/: App.tsx
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: main.rs
guest-js/: index.ts
image/: frame.avif
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  snap.rs
src/js/: controls.js  titlebar.js
