[package]
name = "tauri-plugin-frame"
version = "1.1.1"
authors = ["Siddharth <siddharth99c@gmail.com>", "clarifei"]
description = "Opnionated window decoration controls for Tauri apps."
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-frame"
license = "MIT"
homepage = "https://github.com/clarifei/tauri-plugin-frame"
repository = "https://github.com/clarifei/tauri-plugin-frame"

[dependencies]
tauri = { version = "2.0.0-rc" }
serde = "1.0"
anyhow = "1.0"
enigo = "0.1.3"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc", features = ["build"] }
