[package]
name = "tauri-plugin-frame"
version = "1.1.3"
authors = ["Siddharth <siddharth99c@gmail.com>", "clarifei"]
description = "Opnionated window decoration controls for Tauri apps."
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-frame"
license = "MIT"
homepage = "https://github.com/clarifei/tauri-plugin-frame"
repository = "https://github.com/clarifei/tauri-plugin-frame"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
os_info = "3.13.0"

[target.'cfg(windows)'.dependencies]
enigo = "0.6"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
