[package]
name = "tauri-plugin-frame"
version = "1.1.8"
authors = ["Siddharth <siddharth99c@gmail.com>", "clarifei"]
description = "Opnionated window decoration controls for Tauri apps."
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-frame"
license = "MIT"
homepage = "https://github.com/clarifei/tauri-plugin-frame"
repository = "https://github.com/clarifei/tauri-plugin-frame"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_Controls", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
